# hiresperf

./: .clangd  .gitignore  .gitmodules  Makefile  README.md  buffer.c  hrperf.c  parse.py  pyproject.toml  requirements.txt  simple_module.c  user_program.c
analysis/: compute_invocation_metrics.py  compute_per_core_performance.py  draw_invocation.py  parse_func.py
docs/: parsing.md  try-lucene.md
duckdb/: analyze_thread.py  compute_invocation_metrics.py  draw_invocation.py  parse_ldb.py  parse_timehist.py  plot_everything.py  search_func.py  search_func_id.py
hardware/: Makefile  cpu_acc_test.c  mem_bw_test.c  numa_test.c
hellochar/: Makefile  hellochar.c  pmc.h
include/: common.h  cpucounters.h  mmio.h  pci.h  types.h  uncore_pmu.h  uncore_pmu_discovery.h
parsing/: README.md  parse_hrp.py  parse_hrp_instructed_profile.py  parse_ldb.py  parse_sched.py  plot_distributions.py  plot_everything.py  pyproject.toml
percore/: pcmod.c  ring_buffer.c
prefetch/: Makefile  hellochar.c  pmc.h
scripts/: average_overhead.py  merge.py  parse.py  parse_aggregate.py  parse_bpf_dump.py  parse_dump.py  parse_rate_ktime.py  parse_rates.py  pmc_to_json.py  stats.py  timehist_to_json.py
src/: buffer.c  buffer.h  config.h  cpucounters.c  hrperf.c  hrperf_api.h  hrperf_api.py  intel_msr.h  intel_pmc.h  log.c  log.h  mmio.c  pmc.h  tsc.h  uncore_pmu.c  uncore_pmu_discovery.c
tasks/: __init__.py  hardware.py
test/: mymod.c
tryfixed/: hellochar.c  intel-msr.h  pmc.h
tryp6only/: hellochar.c
workloads/: Makefile  cpu1  cpu1.c  hrperf_api.h  hrperf_control.h  mbw1  mbw1.c  (+24 more)
(+78 files in other folders)
