[project]
name = "hiresperf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "duckdb==1.1.1",
    "fonttools==4.54.1",
    "ipykernel>=6.29.5",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "packaging==24.1",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pip>=25.1.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyelftools==0.29",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "six==1.16.0",
    "threadpoolctl==3.5.0",
    "tzdata==2024.2",
]
